syntax = "proto3";

package user;

service UserPrt {
  rpc RemindPassword (RemindPasswordDto) returns (RemindPasswordResponse);

}

message RemindPasswordDto{
	string MailAddress = 1;
}

message RemindPasswordResponse{
	bool Success = 1;
	string ErrorMessage = 2;
}
